# signalAlign

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  Manual.md  README.md  buildHdpUtil.c  debugging.c  estimateNanoporeParams.c  extract.c  include.mk  index_fasta.c  kmerEventAlign.c  nucleotide_encodings.md  pytest.ini  requirements.txt  requirements.yml  requirements2.yml  setup.py  signalMachine.c  ubuntu18.08_install.sh
tests/: CMakeLists.txt  allTests.c  docker_runSignalAlign-config.json  eventAlignerTests.c  fastaHandlerTests.c  plot_em_model_config.json  plot_multiple_variant_accuracy_config.json  runSignalAlign-config.json  signalPairwiseAlignerTest.c  stateMachineTests.c  test_buildAlignment.tsv  trainModels-config.json  trainModels-config.yaml  train_kmers.txt  variableOrderPairwiseAlignerTests.c
tests/minion_test_reads/: RNA_edge_case.sam  oneD.bam  oneD.fastq.index.readdb  oneD_alignments.sam
tests/minion_test_reads/1D/: 1D.bam  1D.fastq  1D.fastq.index  1D.fastq.index.fai  1D.fastq.index.readdb  LomanLabz_PC_20161025_FNFAB42699_MN17633_sequencing_run_20161025_E_coli_native_450bps_82361_ch112_read108_strand.fast5  LomanLabz_PC_20161025_FNFAB42699_MN17633_sequencing_run_20161025_E_coli_native_450bps_82361_ch6_read347_strand.fast5  LomanLabz_PC_20161025_FNFAB42699_MN17633_sequencing_run_20161025_E_coli_native_450bps_82361_ch92_read1108_strand.fast5
tests/minion_test_reads/RNA_edge_cases/: DEAMERNANOPORE_20170922_FAH26525_MN16450_sequencing_run_MA_821_R94_NA12878_mRNA_09_22_17_67136_read_36_ch_218_strand.fast5  rna_reads.bam  rna_reads.fastq  rna_reads.readdb  rna_reads.sam
tests/minion_test_reads/RNA_no_events/: DEAMERNANOPORE_20170922_FAH26525_MN16450_sequencing_run_MA_821_R94_NA12878_mRNA_09_22_17_67136_read_36_ch_218_strand.fast5  DEAMERNANOPORE_20170922_FAH26525_MN16450_sequencing_run_MA_821_R94_NA12878_mRNA_09_22_17_67136_read_61_ch_151_strand.fast5
tests/minion_test_reads/canonical_ecoli_R9/: canonical_ecoli.bam  canonical_ecoli.readdb
tests/minion_test_reads/embedded_files/: LomanLabz_PC_20161025_FNFAB42699_MN17633_sequencing_run_20161025_E_coli_native_450bps_82361_ch92_read1108_strand.fast5
tests/minion_test_reads/kmer_align/: MinION2_20160921_FNFAB39075_MN16454_sequencing_run_Chip97_Human_R9_4_tune_17484_ch303_read254_strand.fast5  MinION2_20160921_FNFAB39075_MN16454_sequencing_run_Chip97_Human_R9_4_tune_17484_ch303_read254_strand.fasta  PCT0011_20180405_0004A30B001FB1EA_2_A1_D1_sequencing_run_NA12878PRun2_58774_read_67879_ch_2391_strand.fast5  PCT0011_20180405_0004A30B001FB1EA_2_A1_D1_sequencing_run_NA12878PRun2_58774_read_67879_ch_2391_strand.fasta
tests/minion_test_reads/no_event_data_1D_ecoli/: LomanLabz_PC_20161025_FNFAB42699_MN17633_sequencing_run_20161025_E_coli_native_450bps_82361_ch112_read108_strand.fast5  LomanLabz_PC_20161025_FNFAB42699_MN17633_sequencing_run_20161025_E_coli_native_450bps_82361_ch6_read347_strand.fast5  LomanLabz_PC_20161025_FNFAB42699_MN17633_sequencing_run_20161025_E_coli_native_450bps_82361_ch92_read1108_strand.fast5
tests/minion_test_reads/pUC/: puc.bam
tests/test_Docker/: runSignalAlign-config.json  trainModels-config.json
tests/test_alignments/RNA_edge_case_tempFiles_alignment/: 7d31de25-8c15-46d8-a08c-3d5043258c89.sm.forward.tsv  8898d755-e46d-4cbe-842c-545a97718b9d.sm.forward.tsv
tests/test_alignments/RNA_edge_case_tempFiles_alignment_OLD/: 7d31de25-8c15-46d8-a08c-3d5043258c89.sm.forward.tsv
tests/test_alignments/ecoli1D_test_alignments_RAW/: 5cc86bac-79fd-4897-8631-8f1c55954a45.sm.backward.tsv  6deaf971-6506-4e37-b486-cdf5e9d416ac.sm.forward.tsv  9e4d14b1-8167-44ef-9fdb-5c29dd0763fd.sm.backward.tsv
tests/test_alignments/ecoli1D_test_alignments_sm3/: 5cc86bac-79fd-4897-8631-8f1c55954a45.sm.backward.tsv  6deaf971-6506-4e37-b486-cdf5e9d416ac.sm.forward.tsv  9e4d14b1-8167-44ef-9fdb-5c29dd0763fd.sm.backward.tsv
tests/test_alignments/pUC_5mer_tempFiles_alignment/: 03274a9a-0eab-422e-ace7-b35fd3a0f48c.sm.forward.tsv  03274a9a-0eab-422e-ace7-b35fd3a0f48c_Basecall_2D_2d.sm.forward.tsv  073edcf7-d6b7-45f3-8a0a-ed8c186db403.sm.forward.tsv  073edcf7-d6b7-45f3-8a0a-ed8c186db403_Basecall_2D_2d.sm.forward.tsv  07b1cae8-9b48-426f-a2a5-b07437d5a58e.sm.backward.tsv  07b1cae8-9b48-426f-a2a5-b07437d5a58e_Basecall_2D_2d.sm.backward.tsv  21eb57a6-7b72-4811-8193-60ee5a0826c1.sm.forward.tsv  21eb57a6-7b72-4811-8193-60ee5a0826c1_Basecall_2D_2d.sm.forward.tsv  280ce61a-263d-43dd-8d1d-9ea2399ef10d.sm.forward.tsv  (+11 more)
tests/test_assignment_files/: d6160b0b-a35e-43b5-947f-adaa1abade28.sm.assignments.tsv
tests/test_compare_trained_models/: compare_trained_models.config.json
tests/test_expectation_files/: 4f9a316c-8bb3-410a-8cfc-026061f7e8db.template.expectations.tsv
tests/test_hdp/: test_hdp_alignment.txt
tests/test_plot_acc_alignment_deviation/: accuracy_vs_alignment.config.json
tests/test_position_code/: test_ambig.model  test_positions_encoding.positions
tests/test_position_files/: CCWGG_ecoli_k12_mg1655.positions  CCWGG_ecoli_k12_mg1655_CC.positions  CCWGG_ecoli_k12_mg1655_CX.positions  ecoli_positions_CCAGG.tsv  ecoli_positions_CCAGG_C_E.tsv  rna_atg_ftg_fake_ref.positions  test_positions_file.tsv  test_positions_file2.tsv  test_positions_file3.tsv
tests/test_sequences/: fake_rna_ref.fa  fake_rna_reversed.fa
tests/test_singleNucProbs_errorCorrection/: marginals.0.6deaf971-6506-4e37-b486-cdf5e9d416ac.sm.forward.tsv.calls  marginals.1.6deaf971-6506-4e37-b486-cdf5e9d416ac.sm.forward.tsv.calls  marginals.2.6deaf971-6506-4e37-b486-cdf5e9d416ac.sm.forward.tsv.calls  marginals.3.6deaf971-6506-4e37-b486-cdf5e9d416ac.sm.forward.tsv.calls  marginals.4.6deaf971-6506-4e37-b486-cdf5e9d416ac.sm.forward.tsv.calls
tests/test_test_variant_caller/: 03274a9a-0eab-422e-ace7-b35fd3a0f48c.sm.forward.tsv  03274a9a-0eab-422e-ace7-b35fd3a0f48c.sm.vc.tsv
tests/test_variantCalled_files/: 6e520d79-dcc5-4af3-a69f-cf5134a4c563.sm.vc.tsv  8f95d2df-f94b-4285-9c23-38fe7c77dc33.sm.tsv  c53bec1d-8cd7-43d0-8e40-e5e363fa9fca.sm.tsv  ffa0574d-b3b7-4bfe-8e93-c865d5b20de6.sm.vc.tsv  plot_variants_config.json
(+213 files in other folders)
